<resources>
    <string name="app_name">micro hh</string>
    <string name="prefs_file_name" translatable="false">Main preferences</string>
    <string name="hh_base_url" translatable="false">https://api.hh.ru</string>


    <string name="search_fragment_title">Поиск вакансий</string>
    <string name="workplace_fragment_title">Выбор места работы</string>
    <string name="filters_fragment_title">Настройки фильтрации</string>
    <string name="country_fragment_title">Выбор страны</string>
    <string name="region_fragment_title">Выбор региона</string>
    <string name="industry_fragment_title">Выбор отрасли</string>
    <string name="favorites_fragment_title">Избранное</string>
    <string name="vacancy_fragment_title">Вакансия</string>
    <string name="main_screen_title">Главная</string>

    <string name="connection_error">Произошла ошибка</string>

    <!--team screen start-->
    <string name="team_fragment_title">Команда</string>
    <string name="app_developers">Над приложением\nработали</string>
    <string name="developer_1">Андрей @Xaxaido</string>
    <string name="developer_2">Петр @Satturas</string>
    <string name="developer_3">Анастасия @anastasiya.katolikava</string>
    <string name="developer_4">Эдуард @w8wha</string>
    <!--team screen end-->
    <string name="salary_from">От %1$s %2$s</string>
    <string name="salary_to">До %1$s %2$s</string>
    <string name="salary_range">От %1$s до %2$s %3$s</string>
    <string name="salary_not_specified">зарплата не указана</string>


    <!--vacancy screen start-->
    <string name="sharing">Поделиться</string>
    <string name="favorite">Избранное</string>
    <string name="currency_icon">currency_icon</string>
    <string name="vacancy_cover">vacancy_cover</string>
    <string name="req_exp">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="vacancy_description_example">Разрабатывать новую функциональность приложения
        \nПомогать с интеграцией нашего SDK в другие приложения
        \nПроектировать большие новые модули
        \nПисать UI- и unit-тесты
        \nСледить за работоспособностью сервиса и устранять технический долг</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="key_skills_example">Знание классических алгоритмов и структуры данных
    \nПрограммирование для Android больше одного года
    \nЗнание WebRTC</string>

    <!--vacancy screen end-->

    <string name="enter_query_text_placeholder">Введите запрос</string>
    <string name="filter">Фильтр</string>

    <string name="workplace">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="salary_textfield_hint">Введите сумму</string>
    <string name="show_no_salary">Не показывать без зарплаты</string>
    <string name="apply">Применить</string>
    <string name="choose">Выбрать</string>
    <string name="clear">Сбросить</string>

    <string name="industry_screen_search_hint">Введите отрасль</string>

    <plurals name="vacancy">
        <item quantity="one">Найдено %d вакансия</item>
        <item quantity="few">Найдено %d вакансии</item>
        <item quantity="many">Найдено %d вакансий</item>
        <item quantity="other">Найдено %d вакансий</item>
    </plurals>

    <string name="no_connection_placeholder">Нет интернета</string>
    <string name="nothing_found_placeholder">Не удалось получить список вакансий</string>
    <string name="sever_error_placeholder">Ошибка сервера</string>
    <string name="no_data_placeholder">Не удалось получить список</string>
    <string name="image_placeholder_content_desc">Image Placeholder</string>
    <string name="job_favorites_empty">Список пуст</string>
    <string name="job_favorites_unexpected_issue">Не удалось получить список вакансий</string>
    <string name="country_title">Страна</string>
    <string name="region_title">Регион</string>
    <string name="select">Выбрать</string>

    <string name="invalid_vacancy_id">Невалидный id вакансии</string>
    <string name="no_internet_and_not_favorite">Невалидная вакансия</string>
    <string name="no_internet">Нет интернета</string>
    <string name="no_region_title">Такого региона нет</string>
    <string name="no_industry_title">Такой отрасли нет</string>
</resources>
