<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/search_fragment"
    android:id="@+id/nav_graph">

    <action
        android:id="@+id/open_vacancy_details"
        app:destination="@id/vacancy_fragment" />

    <action
        android:id="@+id/open_filters"
        app:destination="@id/filters_fragment" />

    <action
        android:id="@+id/open_workplace"
        app:destination="@id/workplace_fragment" />

    <action
        android:id="@+id/open_country"
        app:destination="@id/country_fragment" />

    <action
        android:id="@+id/open_region"
        app:destination="@id/region_fragment" />

    <action
        android:id="@+id/open_industry"
        app:destination="@id/industry_fragment" />

    <fragment
        android:id="@+id/search_fragment"
        android:name="ru.practicum.android.microhh.search.presentation.ui.SearchFragment"
        android:label="@string/search_fragment_title"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/filters_fragment"
        android:name="ru.practicum.android.microhh.filters.presentation.ui.FiltersFragment"
        android:label="@string/filters_fragment_title"
        tools:layout="@layout/fragment_filters" >
        <action
            android:id="@+id/action_filters_fragment_to_workplace_fragment"
            app:destination="@id/workplace_fragment" />
    </fragment>

    <fragment
        android:id="@+id/workplace_fragment"
        android:name="ru.practicum.android.microhh.workplace.presentation.ui.WorkplaceFragment"
        android:label="@string/workplace_fragment_title"
        tools:layout="@layout/fragment_workplace" >
        <action
            android:id="@+id/action_workplace_fragment_to_country_fragment"
            app:destination="@id/country_fragment" />
        <action
            android:id="@+id/action_workplace_fragment_to_region_fragment"
            app:destination="@id/region_fragment" />
    </fragment>

    <fragment
        android:id="@+id/country_fragment"
        android:name="ru.practicum.android.microhh.country.presentation.ui.CountryFragment"
        android:label="@string/country_fragment_title"
        tools:layout="@layout/fragment_country" >
        <action
            android:id="@+id/action_country_fragment_to_workplace_fragment"
            app:destination="@id/workplace_fragment" />
    </fragment>

    <fragment
        android:id="@+id/region_fragment"
        android:name="ru.practicum.android.microhh.region.presentation.ui.RegionFragment"
        android:label="@string/region_fragment_title"
        tools:layout="@layout/fragment_region" />

    <fragment
        android:id="@+id/industry_fragment"
        android:name="ru.practicum.android.microhh.industry.presentation.ui.IndustryFragment"
        android:label="@string/industry_fragment_title"
        tools:layout="@layout/fragment_industry" />

    <fragment
        android:id="@+id/favorites_fragment"
        android:name="ru.practicum.android.microhh.favorites.presentation.ui.FavoritesFragment"
        android:label="@string/favorites_fragment_title"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/vacancy_fragment"
        android:name="ru.practicum.android.microhh.vacancy.presentation.ui.VacancyFragment"
        android:label="@string/vacancy_fragment_title"
        tools:layout="@layout/fragment_vacancy" >
        <argument
            android:name="vacancyId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/team_fragment"
        android:name="ru.practicum.android.microhh.team.presentation.ui.TeamFragment"
        android:label="@string/team_fragment_title"
        tools:layout="@layout/fragment_team" />

</navigation>
