<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/side_padding_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/side_padding_16" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbarTextStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@id/app_developers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/team_fragment_title" />

    <TextView
        android:id="@+id/app_developers"
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ys_display_bold"
        android:fontWeight="700"
        android:gravity="center_vertical"
        android:text="@string/app_developers"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="developer_1"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/developer_1"
        style="@style/teamScreenDevNamesTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inside_padding_16"
        android:text="@string/developer_1"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/app_developers" />

    <TextView
        android:id="@+id/developer_2"
        style="@style/teamScreenDevNamesTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inside_padding_16"
        android:text="@string/developer_2"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/developer_1" />

    <TextView
        android:id="@+id/developer_3"
        style="@style/teamScreenDevNamesTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inside_padding_16"
        android:text="@string/developer_3"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/developer_2" />

    <TextView
        android:id="@+id/developer_4"
        style="@style/teamScreenDevNamesTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inside_padding_16"
        android:text="@string/developer_4"
        app:layout_constraintEnd_toStartOf="@id/right_border"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/developer_3" />

</androidx.constraintlayout.widget.ConstraintLayout>
