<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackgroundStyle">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/workplace_fragment_title" />

    <ru.practicum.android.microhh.core.presentation.ui.component.SelectableViewHH
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_height"
        android:layout_marginTop="@dimen/side_padding_16"
        app:hhSelectableViewStyle="@style/SelectableViewHHStyle"
        app:label="@string/country_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:text="@string/country_title" />

    <ru.practicum.android.microhh.core.presentation.ui.component.SelectableViewHH
        android:id="@+id/region"
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_height"
        app:label="@string/region_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country"
        app:text="@string/region_title" />

</androidx.constraintlayout.widget.ConstraintLayout>
