<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Base.Theme.MicroHH.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/filters_fragment_title" />

    <ru.practicum.android.microhh.core.presentation.ui.component.SelectableViewHH
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_height"
        app:hhSelectableViewStyle="@style/SelectableViewHHStyle"
        app:label="@string/expected_salary"
        app:text="@string/salary_textfield_hint"
        app:data="empty" />

    <LinearLayout
        android:id="@+id/salary_container"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/side_padding_16"
        android:background="@drawable/rounded_shape_12"
        android:backgroundTint="@color/light_gray">

        <TextView
            android:id="@+id/salary_label"
            style="@style/TypographyRegular12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_padding_8"
            android:layout_marginHorizontal="@dimen/side_padding_16"
            android:text="@string/expected_salary"
            android:textColor="@color/gray"/>

        <EditText
            android:id="@+id/salary"
            style="@style/TypographyRegular16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/side_padding_16"
            android:inputType="number"
            android:hint="@string/salary_textfield_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@android:color/transparent"/>

        </LinearLayout>

</LinearLayout>
